Added Support for pain.008.001.08

--- a/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.11.xml
+++ b/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.11.xml
@@ -20,7 +20,7 @@
           <Cd>SEPA</Cd>
         </SvcLvl>
         <LclInstrm>
-          <Cd>CORE</Cd>
+          <Cd>{{localInstrumentCode}}</Cd>
         </LclInstrm>
         <SeqTp>{{seqTp}}</SeqTp>
       </PmtTpInf>
