Support templated default values for unique EndToEndIds (#12)
* Support templated default values for unique EndToEndIds

* Refine templated default resolution

* Merge remote-tracking branch 'origin/master' into work

* Clarify template workflow and placeholder usage

--- a/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.08.xml
+++ b/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.08.xml
@@ -13,6 +13,7 @@
     <PmtInf>
       <PmtInfId>{{pmtInfId}}</PmtInfId>
       <PmtMtd>DD</PmtMtd>
+      <BtchBookg>{{batchBooking}}</BtchBookg>
       <NbOfTxs>{{numberOfTransactions}}</NbOfTxs>
       <CtrlSum>{{controlSum}}</CtrlSum>
       <PmtTpInf>
