--- a/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.11.xml
+++ b/src/main/resources/de/agwu/apps/easysepa/templates/pain.008.001.11.xml
@@ -13,6 +13,7 @@
     <PmtInf>
       <PmtInfId>{{pmtInfId}}</PmtInfId>
       <PmtMtd>DD</PmtMtd>
+      <BtchBookg>{{batchBooking}}</BtchBookg>
       <NbOfTxs>{{numberOfTransactions}}</NbOfTxs>
       <CtrlSum>{{controlSum}}</CtrlSum>
       <PmtTpInf>
